portal/static/less/gil.less
/* ... */
.cookie-monster-modal-backdrop-cover {
    position: fixed;
    background: #FFF;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    z-index: 1000;
}

@media (max-width:767px) {
    .box-modal__footer form input {
        min-width: 100px;
        width: 150px
    }
}

.box-modal__footer .box-modal__sub {
    color: #7C959E
}

form .submitted-text {
    display: none
}

form.is-submitted input,
form.is-submitted button {
    display: none
}

form.is-submitted .submitted-text {
    display: block
}

* {
    box-sizing: border-box
}

img {
    max-width: 100%
}

a:hover {
    cursor: pointer;
    text-decoration: none
}

.upper-banner {
    height: 75px;
    text-align: center;
    background: #7C959E;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 10
}

@media (max-width:899px) {
    .upper-banner {
        height: 50px;
        display: none
    }
}

@media (max-width:767px) {
    .upper-banner {
        display: none
    }
}

.is-upper-banner-closed .upper-banner {
    display: none
}

.upper-banner__text {
    color: #FFF;
    display: block;
    font-size: 21px;
    line-height: 75px;
    font-weight: 500;
    margin: 0
}
.upper-banner__text:active,
.upper-banner__text:hover,
.upper-banner__text:visited {
    text-decoration: none;
    color: #fff
}

.upper-banner__text figure {
    font-size: 30px;
    line-height: 1;
    margin-left: 5px;
    top: 10px
}

@media (max-width:767px) {
    .upper-banner__text figure {
        top: 7px
    }
}

@media (max-width:899px) {
    .upper-banner__text {
        font-size: 14px;
        line-height: 50px
    }
}

.upper-banner__text:hover {
    color: #FFF
}

.upper-banner__close {
    position: absolute;
    right: 20px;
    top: 50%;
    margin-top: -5px;
    figure {
        color: #fff;
        font-size: 27px;
        line-height: 1;
        top: -10px
    }
    figure:hover {
        opacity: .5
    }
}

.main {
    top: 75px;
    padding-top: 30px;
    padding-bottom: 30px;
    position: relative;
    z-index: 1;
}
.main-content {
    min-height: 150px;
    &.error-message {
        padding-top: 17.5%;
        padding-bottom: 10%;
        position: relative;
        z-index: 1;
        padding-left: 10%;
        padding-right: 10%;
        font-size: 19px;
        font-weight: 600
    }
}

@media (max-width:767px) {
    .main {
        padding-top: 20px;
        margin-top: -20px
    }
}

@media (min-width:769px) {
    .is-upper-banner-closed .main {
        top: 60px;
        padding-top: 16px;
        padding-bottom: 16px;
    }
}

.header {
    padding: 50px 70px 40px;
    position: absolute;
    width: 100%;
    height: 160px;
    z-index: 10
}

.header.no-banner {
    padding-top: 2em;
}

@media (max-width:899px) {
    .header {
        padding: 28px 80px;
        position: fixed;
        top: 0;
        height: 116px;
        background: #fff;
        z-index: 1500;
        padding-left: 15px;
        padding-right: 15px
    }
}

.is-scrolled .header {
    padding: 32px 80px;
    position: fixed;
    top: 0;
    height: 102px;
    background: #fff;
    z-index: 1500
}

@media (max-width:899px) {
    .is-scrolled .header {
        padding-left: 15px;
        padding-right: 15px
    }
}

.header>div a {
    display: inline-block;
    position: relative
}

.is-scrolled .header>div a {
    background: rgba(210, 209, 197, .2)
}

@media (max-width:899px) {
    .header>div a {
        background: rgba(210, 209, 197, .2)
    }
}

@media (max-width:767px) {
    .header>div a {
        height: 44px
    }
    .header>div a figure {
        left: 16px
    }
}

@media (max-width:767px) {
    .header>div a span {
        display: none
    }
}

.header__menu {
    float: left;
    margin-top: 8px;
}

.header__menu a {
    padding-left: 55px;
    min-height: 32px
}

@media (max-width:767px) {
    .header__menu a {
        padding-left: 45px;
        padding-right: 5px
    }
}

.header__menu figure {
    font-size: 23px;
    line-height: 1;
    color: #7C959E;
    position: absolute;
    top: 11px;
    left: 14px
}

.header__meta {
    float: right;
    display: none;
    img {
        width: 45px;
        position: relative
    }
    a {
        margin-left: 10px
    }
}
@media (min-width:768px) {
    .header__meta {
        margin-top: 8px;
        display: block;
    }
}

.is-showing-logged-in {
    display: none;
    .header--logged-in {
        display: block!important
    }
    .header {
        display: none
    }
}

.header--logged-in {
    padding: 25px 80px;
    position: fixed;
    top: 0;
    height: 92px;
    background: #fff;
    z-index: 1500;
    background: transparent url(../img/header-logged-in.jpg) no-repeat scroll center top;
    background-size: cover
}

@media (max-width:767px) {
    .header--logged-in {
        padding: 25px 80px;
        position: fixed;
        top: 0;
        height: 92px;
        background: #fff;
        z-index: 1500;
        background: transparent url(../img/header-logged-in.jpg) no-repeat scroll center top;
        background-size: cover;
        padding-left: 15px;
        padding-right: 15px
    }
}

.header--logged-in .logo {
    background-image: url(../img/logo-white.png);
    background-size: 124px 54px;
    width: 124px;
    height: 54px;
    margin-left: -66px;
    margin-top: -8px;
    margin-left: -62px
}

@media only screen and (-webkit-min-device-pixel-ratio:2),
only screen and (-moz-min-device-pixel-ratio:2),
only screen and (min-device-pixel-ratio:2),
only screen and (min-resolution:192dpi),
only screen and (min-resolution:2dppx) {
    .header--logged-in .logo {
        background-image: url(../img/logo-white@2x.png);
        background-size: 124px 54px
    }
}

.is-scrolled .header--logged-in {
    background: transparent url(../img/header-logged-in.jpg) no-repeat scroll center top;
    background-size: cover
}

.is-scrolled .header--logged-in .logo {
    margin-left: -62px
}

.is-scrolled .header--logged-in div>a {
    background: #FFF
}
/* ... */

